added more styling

--- a/src/index.css
+++ b/src/index.css
@@ -225,6 +225,61 @@
         border-radius: 100%;
         margin: 20px;
     }
+    /* Dasboard */
+    
+    .feedcontainer {
+        padding: 13px 5%;
+    }
+    
+    .parent {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .div1 {
+        border-radius: 10px;
+        border: 1px solid rgba( 255, 255, 255, 0.18);
+        flex-basis: 35%;
+        position: sticky;
+        top: 100px;
+        align-self: flex-start;
+        padding: 2px 2px;
+    }
+    
+    .div2 {
+        background: rgba( 0, 255, 197, 0.15);
+        box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37);
+        backdrop-filter: blur( 15px);
+        -webkit-backdrop-filter: blur( 15px);
+        border-radius: 10px;
+        border: 1px solid rgba( 255, 255, 255, 0.18);
+        flex-basis: 60%;
+        align-self: flex-start;
+    }
+    
+    .resources-feed-about,
+    .scholorship-feed-about,
+    .events-feed-about {
+        padding-left: 25px;
+        background: rgba(255, 0, 0, 0.529);
+        box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37);
+        backdrop-filter: blur( 9.5px);
+        -webkit-backdrop-filter: blur( 9.5px);
+        border-radius: 10px;
+        border: 1px solid rgba( 255, 255, 255, 0.18);
+        margin-bottom: 10px;
+    }
+    
+    .review-feed-about {
+        background: rgba(204, 0, 255, 0.59);
+        box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37);
+        backdrop-filter: blur( 18px);
+        -webkit-backdrop-filter: blur( 18px);
+        border-radius: 10px;
+        border: 1px solid rgba( 255, 255, 255, 0.18);
+        color: #000000;
+        padding-left: 25px;
+    }
     
     .footer {
         text-align: center;
