--- a/src/index.css
+++ b/src/index.css
@@ -338,11 +338,17 @@
     
     .feedcontainer {
         padding: 13px 5%;
+        background-image: url(./Images/endless-constellation.svg);
+        background-size: cover;
+        background-repeat: no-repeat;
     }
     
     .parent {
-        display: flex;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr;
+        grid-column-gap: 11px;
+        grid-row-gap: 0px;
     }
     
     .div1 {
@@ -355,15 +361,13 @@
         padding: 2px 2px;
     }
     
-    .div2 {
-        background: rgba( 0, 255, 197, 0.15);
+    .All-post-section {
+        background: rgba( 255, 255, 255, 0.3);
         box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37);
-        backdrop-filter: blur( 15px);
-        -webkit-backdrop-filter: blur( 15px);
+        backdrop-filter: blur( 5px);
+        -webkit-backdrop-filter: blur( 5px);
         border-radius: 10px;
         border: 1px solid rgba( 255, 255, 255, 0.18);
-        flex-basis: 60%;
-        align-self: flex-start;
     }
     
     .resources-feed-about,
