--- a/src/index.css
+++ b/src/index.css
@@ -6,24 +6,28 @@
         background-color: #ffffff00;
     }
     
-     ::-webkit-scrollbar {
-        width: 20px;
-        background-color: transparent;
+    body.dark {
+        --fontclr: #fafafa;
+        --bgclr: #000000;
     }
     
-     ::-webkit-scrollbar-thumb {
-        background-color: #f700ff;
-        border-radius: 20px;
-        border: 6px solid transparent;
-        background-clip: content-box;
+     ::-webkit-scrollbar {
+        width: 20px;
     }
     
      ::-webkit-scrollbar-track {
         background-color: transparent;
     }
     
+     ::-webkit-scrollbar-thumb {
+        background-color: rgb(255, 0, 0);
+        border-radius: 20px;
+        border: 6px solid transparent;
+        background-clip: content-box;
+    }
+    
      ::-webkit-scrollbar-thumb:hover {
-        background-color: #00d5ff;
+        background-color: rgb(0, 217, 255);
     }
     
     code {
@@ -495,6 +499,44 @@
         -webkit-backdrop-filter: blur( 7px);
         border-radius: 10px;
         border: 1px solid rgba( 255, 255, 255, 0.18);
+    }
+    
+    #Aichatbtn {
+        display: block;
+        position: fixed;
+        bottom: 30px;
+        right: 80px;
+        z-index: 10000;
+        border: none;
+        outline: none;
+        background-color: rgb(42, 42, 255);
+        color: white;
+        cursor: pointer;
+        text-align: center;
+        line-height: normal;
+        width: 100px;
+        height: 50px;
+        border-radius: 25px;
+        font-size: 16px;
+        padding-top: 15px;
+        text-decoration: wavy;
+    }
+    
+    #scrollup {
+        display: none;
+        position: fixed;
+        bottom: 30px;
+        right: 20px;
+        z-index: 1000000;
+        border: none;
+        outline: none;
+        background-color: rgb(234, 0, 255);
+        color: white;
+        cursor: pointer;
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        font-size: 18px;
     }
     
     .footer--section {
